# CGAL_Maschining

./: CMakeLists.txt  corefinement_polyhedron_union.cpp  errorMSG.txt
data/: Cylinder6.off  VB56.off
